# retexture

./: .gitignore  2d_mapping.py  LICENSE  README.md  analyze.py  blender_code_9_25_23.py  pyproject.toml  requirements.txt  rmscp.py  run.py  run.sh  setup.py  shape_v_tex.py  temp.py  viewpoint.py
.github/workflows/: python-publish.yml
configs/: base.json  base.yaml  black.yaml  humanredo.yaml
outputs/: contents.txt  err.json
outputs/2023-10-23/18-13-20/.hydra/: hydra.yaml
outputs/2023-10-23/18-13-37/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-23/18-13-52/.hydra/: hydra.yaml
outputs/2023-10-23/18-13-57/.hydra/: hydra.yaml
outputs/2023-10-23/18-17-00/.hydra/: hydra.yaml
outputs/2023-10-23/18-18-14/.hydra/: hydra.yaml
outputs/2023-10-23/18-20-11/.hydra/: hydra.yaml
outputs/2023-10-23/18-20-24/.hydra/: hydra.yaml
outputs/2023-10-23/18-21-47/.hydra/: hydra.yaml
outputs/2023-10-23/18-22-08/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-23/18-22-21/.hydra/: config.yaml  hydra.yaml
retexture/: .util.py.swp  __init__.py  blender_code_9_25_23.py  gpu.py  main.py  mikayla_err.py  run.py  temp.py  tmp.py  util.py
retexture/gpu/: blender_gpu_example.py  gputest.py
retexture/ml/: get_logits.py  main.py
retexture/outputs/2023-10-23/20-37-39/.hydra/: hydra.yaml
retexture/outputs/2023-10-23/20-39-27/.hydra/: config.yaml  hydra.yaml
retexture/outputs/2023-10-23/20-46-45/.hydra/: hydra.yaml
retexture/outputs/2023-10-23/20-47-04/.hydra/: hydra.yaml
retexture/outputs/2023-10-23/20-47-36/.hydra/: hydra.yaml
retexture/outputs/2023-10-23/20-47-44/.hydra/: hydra.yaml
retexture/scripts/: blend.py  model_inference.py  site.py
retexture/scripts/media/: media.py  quilt.sh  walk_media.py
retexture/scripts/paper/: mkfig.py
retexture/scripts/setup/: unpack_models.py
retexture/util/: data_utils.py  media.py
retexture/utils/: __init__.py  data_utils.py  model_utils.py
scripts/: conda.sh  install.sh
temp/: requirements.txt  run.sh
tests/: test_dataset.py
