[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retexture"
version = "0.1.0"
description = "ReTexture dataset toolkit for generation and analysis"
readme = "README.md"
authors = [
    { name = "Matthew Hyatt", email = "mhyatt000@gmail.com" },
]
license = { file="LICENSE" }
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

dependencies = [
    "tqdm >=4.74.0",
    "numpy >=1.23.5",
    "hydra-core <1.2"
]


[project.urls]
Homepage = "https://github.com/mhyatt000/retexture"

[project.scripts]
run = "retexture.master.main"
