[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retexture"
version = "0.1.1"
description = "ReTexture dataset toolkit for generation and analysis"
readme = "README.md"
authors = [
    { name = "Matthew Hyatt", email = "mhyatt000@gmail.com" },
]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    "tqdm >=4.61.2",
    "numpy >=1.23.5",
    "hydra-core >=1.3"
]


[project.urls]
Homepage = "https://github.com/mhyatt000/retexture"

[project.scripts]
run = "retexture.run:main"
